[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Sergei <chipser2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.11"
fastapi = "^0.95.1"
python-multipart = "0.0.6"
hypercorn = "^0.14.3"
pyjwt = "^2.6.0"
uvloop = "^0.17.0"
psycopg = "^3.1.9"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
psycopg-binary = "^3.1.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.264"
isort = "^5.12.0"
httpx = "^0.26.0"
sqlalchemy-utils = "^0.41.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[tool.poetry.group.migrations.dependencies]
alembic = "^1.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
